deployment/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: acct-mgt-api-service-load-balancer
  labels:
    app: acct-mgt-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: acct-mgt-api-port
  selector:
    app: acct-mgt-api
  type: LoadBalancer
